third_party/move/move-compiler-v2/tests/more-v1/parser/spec_parsing_index_fail.exp

Diagnostics:
error: expected `vector<_>` but found a value of type `u64`
  ┌─ tests/more-v1/parser/spec_parsing_index_fail.move:3:15
  │
3 │       let _ = x[1];
  │               ^
